--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,12 @@
 #picture-container{
 	width: 100%;
 	padding: 100px 50px;
-	background-color: #ffffaa;
 }
 
 #picture-container div{
+	margin: 50px 0;
 	height: 100px;
 	width: 100%;
-	background-color: #111aaa;
 }
 
 #picture-container img{
